5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1594_1803.log
== TEST (2019-03-31 20:12:19) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s = n1*2*5 + n2*4 + n3*3 + n2*2
t = s % 11
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:12:57) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s = n1*2*5 + n2*4 + n3*3 + n2*2
t =( s % 11)
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:13:15) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s = n1*2*5 + n2*4 + n3*3 + n2*2
t =( s % 11)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:13:26) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s = n1*2*5 + n2*4 + n3*3 + n2*2
t =( s % 11)
print(t)
-- EXECUTION TIME:
0.208607
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1803/main.py", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:13:47) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s = n1*5 + n2*4 + n3*3 + n2*2
t =( s % 11)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:34:06) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= sq+s2+s3+s4 % 11
 print(t)
-- ERROR:
File "XXXX", line 10
    print(t)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:34:15) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= sq+s2+s3+s4 % 11
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:34:38) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= s1+s2+s3+s4 % 11
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:34:50) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= s1+s2+s3+s4 % 11
print(t)
-- EXECUTION TIME:
0.1307
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1803/main.py", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:36:31) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= s1+s2+s3+s4 // 11 % 4

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:36:44) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= s1+s2+s3+s4 // 11 % 4

print(t)
-- EXECUTION TIME:
0.184266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1803/main.py", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:36:57) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= s1+s2+s3+s4 // 11 

print(t%4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:37:14) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= s1+s2+s3+s4 // 11 

print(t%4)
-- EXECUTION TIME:
0.16154
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1803/main.py", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:37:34) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= s1+s2+s3+s4 % 11 

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:37:56) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= s1+s2+s3+s4 // 11 

print(t%4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:38:12) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= s1+s2+s3+s4 // 11 

print(t%5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:39:23) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*2
s2=n2*3
s3=n3*4
s4=n4*5
t= s1+s2+s3+s4 % 11 
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:40:33) 
-- CODE:
n1 = int(input("n:"))
n2 = int(input("n2:"))
n3 = int(input("n3:"))
n4 = int(input("n4:"))
s1= n1*5
s2=n2*4
s3=n3*3
s4=n4*2
t= s1+s2+s3+s4 % 11 
print(t)
-- EXECUTION TIME:
0.157993
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1803/main.py", line 2, in <module>
    n2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:43:04) 
-- CODE:
a = int(input("n:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10

print(a1)

s1= a1*2
s2=n2*3
s3=n3*4
s4=n4*5

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    s2=n2*3
NameError: name 'n2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:44:10) 
-- CODE:
a = int(input("n:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10

print(a1)

s1= a1*5
s2= a2*4
s3=a3*3
s4=a4*2

soma = (s1+s2+s3+s4)%11
print(soma)
-- OUTPUT:
2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:44:13) 
-- CODE:
a = int(input("n:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10

print(a1)

s1= a1*5
s2= a2*4
s3=a3*3
s4=a4*2

soma = (s1+s2+s3+s4)%11
print(soma)
-- EXECUTION TIME:
0.157181
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
2
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
3
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
0
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:44:27) 
-- CODE:
a = int(input("n:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10


s1= a1*5
s2= a2*4
s3=a3*3
s4=a4*2

soma = (s1+s2+s3+s4)%11
print(soma)
-- EXECUTION TIME:
0.139862
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:03:07) 
-- CODE:
a = int(input("a:"))

a1 = a//1000
a2 = a//100
a3 = a//10
a4 =  a%10


s1= a1*5
s2= a2*4
s3=a3*3
s4=a4*2

soma = (s1+s2+s3+s4)%11
print(soma)
-- EXECUTION TIME:
0.239713
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
8
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
10
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:05:44) 
-- CODE:
a = int(input("a:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%100
a4 =  a%10

s1= a1*5
s2= a2*4
s3=a3*3
s4=a4*2

soma = (s1+s2+s3+s4)%11
print(soma)
-- EXECUTION TIME:
0.165432
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
2
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:05:48) 
-- CODE:
a = int(input("a:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10

s1= a1*5
s2= a2*4
s3=a3*3
s4=a4*2

soma = (s1+s2+s3+s4)%11
print(soma)
-- EXECUTION TIME:
0.173171
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:08:19) 
-- CODE:
a = int(input("a:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10

s1= a1*5
s2= a2*4
s3=a3*3
s4=a4*2

soma = (s1+s2+s3+s4)%11
print(soma)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:08:33) 
-- CODE:
a = int(input("a:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10

s1= a1*5
s2= a2*4
s3=a3*3
s4=a4*2

soma = (s1+s2+s3+s4)%11
print(soma)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
